@@ -7,6 +7,7 @@
 - 2021-05-08                                -
 ---------------------------------------------
 .: WSW: BugFix - Not able to navigate to other page when invoice is not found (WSW-106)
+.: WSW: Task - Add mobile size supported for order (WSW-105)
 
 ---------------------------------------------
 - 2021-05-06                                -
